[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
regex = "1.10.6"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
slog = "2.7"
slog-async = "2.7"
slog-term = "2.7"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
